# embedding_model_comparision

./: main.py  mistral_llm.py  phi_3mini_api_test.py  pyproject.toml  requirements.txt
RAG/: bio_bert.py  comparing_embedding_1.py  comparing_med_embeddings.py  embeddings.py  extract_pdf.py  lml6.py  medEmbed_encoder.py  medEmbed_test.py  medical_embeddings.py  mordern_BERT.py  process_pdf.py  s_bert.py  save_data_to_vectordb.py  text_splitter.py  umlsBERT.py  umlsBERT_encoder.py  vector_store.py  vector_store_2.py  wikimedical_BERT.py
RAG/faiss_index/: index.faiss  index.pkl
RAG/med_faiss_index/: index.faiss  index.pkl
