[project]
name = "medical-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "langchain[transformers]>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.21",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.40.0",
    "scikit-learn>=1.8.0",
]
